# TxPredict

./: .gitignore  README.md  gerar_audios.ps1  setup.sh
txpredict-contracts/: Anchor.toml  Cargo.toml
txpredict-contracts/programs/txpredict-market/: Cargo.toml
txpredict-contracts/programs/txpredict-market/src/: lib.rs
txpredict-frontend/: package-lock.json  package.json
txpredict-frontend/src/app/: globals.css  page.tsx
txpredict-node-keeper/: index.ts  package-lock.json  package.json
