[package]
name = "txpredict-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "txpredict_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
txoracle = { git = "https://github.com/txodds/tx-on-chain", branch = "main", features = ["cpi"] }
